--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Dickens",
   "version": "1.0.0",
   "description": "The missing notes and highlights manager for Amazon Kindle",
-  "main": "js/main.js",
+  "main": "main.js",
   "scripts": {
     "start": "electron main.js"
   },
